k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deno-web-app
spec:
  selector:
    app: deno-web-app
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
