k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deno-web-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # 如果您使用 HTTPS，請取消註釋以下行
    # kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    # networking.gke.io/managed-certificates: "web-cert"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deno-web-app
            port:
              number: 80
